# meshkit

./: .gitignore  2-assms.inp  CMakeLists.txt  EdgeMesher.cpp  LICENSE  LICENSE.txt  MKVersion.h.in  Makefile  Makefile.am  Mesh-pll.files  Mesh-pll.includes  MeshKitConfig.cmake.in  README  README.md  README.txt  RELEASE_NOTES  RELEASE_NOTES.txt  TODO  common.mk.in  configure.ac  configure.in  coregen.cpp  iBase.hh  iGeom.hh  iMesh.hh  meshkit.make.in  mw_func.cpp  pin1.cub  pin217.cpp  sixth.cpp  test_sodium_all.cub
MeshKitv1.1/doc/: Makefile.am  mainpage.h  meshkit.dox.in
MeshKitv1.1/plibs/: CubitHOElements.cc  EdgeMesher.cpp  EdgeMesher.h  GEdge.cc  GFace.h  GModelBRep.h  ITAPFace.cc  ITAPFace.h  ITAPVertex.h  ITAP_NetGen_EdgeMesh.cpp  ITAP_NetGen_EdgeMesh.h  ITAP_NetGen_Mesh.cpp  ITAP_NetGen_Mesh.h  ITAP_NetGen_SurfMesh.h  Laplace.cc  Laplace.h  Makefile.am  OCCIncludes.h  SpectralElements.cc  SurfMesher.cc  SurfMesher.h  TFIMap.cc  brick.brep  bricks1.cc  geom1.cc  itaps.h  ngtest.cpp  occmesh.cpp  off_io.cc  spectral.cc  unv2vtk.cpp
QuadMesh/: BinaryTree.cc  BinaryTree.h  DualGraph.cc  DualGraph.h  FastArea.cc  Makefile  Makefile.am  Mesh.cc  Mesh.h  MeshRefine2D.cpp  MeshRefine2D.h  QuadCleanUp.cc  QuadCleanUp.h  README  Tri2Quad.cc  Tri2Quad.h  basic_math.h  circumcenter.cpp  circumcenter.h  cleanup.cc  laplace.cc  matching.cc  mesh.cc  mesh.h  meshOpt.cc  off_io.cc  patterns.cc  percolateup.cc  sq.1.ele  sq.1.node  superiorq30.1.ele  superiorq30.1.node  superiorq30.1.poly  test.cc  tri_io.cc
QuadMesh/docs/: amr2010.bib  amr2010.tex  torus1.eps  torus2.eps  torus3.eps
algs/: CESets.cpp  CESets.hpp  CopyGeom.cpp  CopyGeom.hpp  CopyMesh.cpp  CopyMesh.hpp  CopyUtils.hpp  CopyVerts.cpp  CopyVerts.hpp  CutCellMesh.cpp  CutCellMesh.hpp  CutCellMesh_test.cpp  EBMesh.cpp  EBMesh.hpp  EBMesh_test.cpp  EdgeMesher.cpp  EdgeMesher.hpp  ExtrudeMesh.cpp  ExtrudeMesh.hpp  IntersectMesh.cpp  IntersectMesh.hpp  LocalTag.hpp  Makefile.am  MergeMesh.cpp  MergeMesh.hpp  MeshRefine2D.cpp  MeshRefine2D.h  MoveMesh.cpp  MoveMesh.hpp  OneToOneSwept.cpp  OneToOneSwept.hpp  ProjectShell.cpp  ProjectShell.hpp  ProjectShell_test.cpp  Transform.cpp  Transform.hpp  vec_utils.cpp  vec_utils.hpp
algs/Qslim/: .cproject  .project  3D.cpp  3D.h  Array.h  Heap.cpp  Makefile  Makefile.am  Makefile.old  QslimDecimation.cpp  QslimDecimation.h  QslimOptions.cpp  QslimOptions.h  Qslim_test.cpp  dbg.txt  primitives.cpp  primitives.h  quadrics.cpp  quadrics.cxx  quadrics.h
algs/make_watertight/: Makefile.am  arc.cpp  arc.hpp  check_watertight.cpp  cleanup.cpp  cleanup.hpp  gen.cpp  make_watertight.cpp  post_process.cpp  zip.cpp
algs/test/: AddZTag_test.cpp  BedJako.cpp  CopyGeom_test.cpp  CopyMesh.cpp  EBMesh.cpp  ExtrudeMesh.cpp  IntersectMesh_test.cpp  Makefile.am  ProjectShell.cpp  TestFramework.hpp  assygen_default.cub  pointset.cpp
camal/: CAMALGeomEval.cpp  CAMALGeomEval.hpp  CAMALSizeEval.hpp  CamalPaveDriver.cpp  CamalPaveDriver.hpp  ComputeThickness.cpp  CreateShell.cpp  Geometrize.cpp  Makefile.am  PB.h5m  SmoothBase.cpp  SmoothBase.hpp  SmoothCurveEval.cpp  SmoothCurveEval.hpp  SmoothFaceEval.cpp  SmoothFaceEval.hpp  SmoothMeshEval.cpp  SmoothMeshEval.hpp  SmoothVertex.cpp  SmoothVertex.hpp  camal_interface.cpp  camal_interface.hpp  camel.cpp  camel.hpp  extrudeQuads.cpp  icesheet_test.cpp  main.cpp  newSmoothTest.cpp  shell.h5m  smooth_test.cpp
example/: MBGeomOp.cpp  MBSplitOp.cpp  MBVolOp.cpp  Makefile.am  SetPnt2Quad.cpp  TriangleMesher.cpp  assygen.cpp  basic.cpp  copygeom.cpp  copymesh.cpp  ebmesh.cpp  edgemesh.cpp  example_MBGeomOp.cpp  example_MBSplitOp.cpp  example_MBVolOp.cpp  example_SetPnt2Quad.cpp  example_TriangleMesher.cpp  example_assygen.cpp  example_basic.cpp  example_camalmb2.cpp  example_camalmbgeom.cpp  example_camalmbgeomvar.cpp  example_camalpaver.cpp  example_camaltetmesher.cpp  example_camaltriadvance.cpp  example_copygeom.cpp  example_copymesh.cpp  example_coregen.cpp  example_ebmesh.cpp  example_edgemesh.cpp  example_edgemesher.cpp  example_extrudemesh.cpp  example_fbgeom.cpp  example_graph.cpp  example_intassign.cpp  example_jaalquad.cpp  example_mb2.cpp  example_mbgeom.cpp  example_mbgeomop.cpp  example_mbgeomvar.cpp  (+42 more)
example/data/: circlesquare.sat  lego.sat  lego1.sat
rgg/: Makefile.am  README  Twopin.inp  assygen.cpp  assygen_default.inp  clock.cpp  constants.hpp  copy_move_parallel.cpp  copymove.cpp  copymove_parallel.cpp  coregen.cpp  coregen_default.inp  crgen.cpp  crgen.hpp  cylinder.cpp  cylinder.hpp  fileio.hpp  io.cpp  matrixtemplate.hpp  nrgen.cpp  nrgen.hpp  nrgen_test.cpp  parser.cpp  parser.hpp  pin1.cub  pin1_occ.stp  pin217.cpp  pincell.cpp  pincell.hpp  simplearray.hpp  test_geom.inp  test_sodium_all.cub  test_sodium_all_occ.stp  twoassm.inp  utils.cpp  utils.hpp  vectortemplate.hpp
rgg/files/: h1.inp  h2.inp  s1.inp  s1.jou  s2.inp  v1.inp  v1.jou  v2.inp  v3.inp  v4.inp  v5.inp
src/: CMakeLists.txt  Makefile.am
src/algs/: CADSurfaceMesher.cpp  CESets.cpp  CMakeLists.txt  CopyGeom.cpp  CopyMesh.cpp  CopyUtils.cpp  CopyUtils.hpp  CurveFacetMeshReader.cpp  CurveMesher.cpp  EBMesher.cpp  EdgeMesher.cpp  ExtrudeMesh.cpp  MBGeomOp.cpp  MBSplitOp.cpp  MBVolOp.cpp  Makefile.am  MergeMesh.cpp  MeshOpTemplate.cpp  OneToOneSwept.cpp  ParExchangeMesh.cpp  ParPostRecv.cpp  ParRecvSurfMesh.cpp  ParSendPostSurfMesh.cpp  ParallelMesher.cpp  ProjectShell.cpp  SCDMesh.cpp  SolidCurveMesher.cpp  SolidSurfaceMesher.cpp  SurfaceFacetMeshReader.cpp  TFIMapping.cpp  Transform.cpp  VertexMesher.cpp  register_algs.cpp
src/core/: CMakeLists.txt  Error.cpp  GraphNode.cpp  MKCore.cpp  MKGraph.cpp  Makefile.am  MeshOp.cpp  MeshOpFactory.cpp  MeshOpSet.cpp  MeshScheme.cpp  ModelEnt.cpp  (+3 more)
test/: CMakeLists.txt  Makefile.am  TestUtil.hpp  test_testutil.cpp
tools/: CMakeLists.txt  MKmesh.cpp  Makefile.am  assygen.cpp  coregen.cpp  postbl.cpp
utils/: ArrayManager.hpp  LocalSet.hpp  LocalTag.hpp  MKException.hpp  MKUtils.cpp  MKUtils.hpp  MKUtils_test.cpp  Makefile.am  SimpleArray.h  SimpleArray.hpp  iGeom.hh  iMesh.cpp  iMesh.hh  iRel.hh
xforms/: Makefile.am
(+1312 files in other folders)
